--- a/src/main/resources/templates/updateTask.html
+++ b/src/main/resources/templates/updateTask.html
@@ -35,7 +35,7 @@
                 Редактирование задачи.
             </div>
             <div class="card-body">
-                <form th:action="@{/updateTask}" method="POST" th:object="${task}">
+                <form th:action="@{/tasks/update}" method="POST" th:object="${task}">
                     <input type="hidden" name="id" th:field="*{id}"/>
                                     <div class="form-group">
                         <label for="desc">Описание</label>
