--- a/src/main/resources/templates/task/tasks.html
+++ b/src/main/resources/templates/task/tasks.html
@@ -27,20 +27,20 @@
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-<!--        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">-->
-<!--            <div class="navbar-nav">-->
-<!--                <a class="nav-item nav-link active" th:href="@{/index}">Главная <span-->
-<!--                        class="sr-only">(current)</span></a>-->
-<!--                <a class="nav-item nav-link" th:if="${user.name == 'Гость'}" th:href="@{/loginPage}">-->
-<!--                    <span th:text="${user.name}"></span>-->
-<!--                    <span> | Войти</span>-->
-<!--                </a>-->
-<!--                <a class="nav-item nav-link" th:if="${user.name != 'Гость'}" th:href="@{/logout}">-->
-<!--                    <span th:text="${user.name}"></span>-->
-<!--                    <span> | Выйти</span>-->
-<!--                </a>-->
-<!--            </div>-->
-<!--        </div>-->
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" th:href="@{/index}">Главная <span
+                        class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" th:if="${user.name == 'Гость'}" th:href="@{/loginPage}">
+                    <span th:text="${user.name}"></span>
+                    <span> | Войти</span>
+                </a>
+                <a class="nav-item nav-link" th:if="${user.name != 'Гость'}" th:href="@{/logout}">
+                    <span th:text="${user.name}"></span>
+                    <span> | Выйти</span>
+                </a>
+            </div>
+        </div>
     </nav>
     <div >
         <div class="card-header">
