--- a/src/main/resources/templates/task/add.html
+++ b/src/main/resources/templates/task/add.html
@@ -31,7 +31,7 @@
                 Новое задание
             </div>
             <div class="card-body">
-                <form th:action="@{/templates/task/create}" method="POST">
+                <form th:action="@{/tasks/create}" method="POST">
                     <div class="form-group">
                         <input type="hidden" name="id" value="5"/>
                         <label for="desc">Описание</label>
