--- a/src/main/resources/templates/task/add.html
+++ b/src/main/resources/templates/task/add.html
@@ -37,6 +37,21 @@
                         <label for="desc">Описание</label>
                         <input type="text" class="form-control" name="description" id="desc">
                     </div>
+                    <div class="form-group">
+                        <label for="priority.id">Приоритет</label>
+                        <select class="form-control" id="priority.id" name="priority.id">
+                            <option th:each="priority : ${priorities}" th:value="${priority.id}" th:text="${priority.name}"></option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="category.id">Категории</label>
+                        <select class="form-control" id="category.id" name="categoriesId" multiple="multiple">
+                            <option th:each="category : ${categories}"
+                                    th:value="${category.id}"
+                                    th:text="${category.name}">
+                            </option>
+                        </select>
+                    </div>
                     <button type="submit" class="btn btn-primary">Сохранить</button>
                 </form>
             </div>
